[package]
name = "nbd-async"
version = "0.4.0"
authors = ["Olle Sandberg <olle@b3rg.se>"]
license = "MIT"
readme = "README.md"
description = "Block device drivers in userspace."
repository = "https://github.com/oll3/nbd-async"
edition = "2018"
keywords = ["nbd", "block-device", "userspace"]
categories = ["filesystem", "asynchronous", "os", "network-programming"]

[dependencies]
async-trait = "0.1"
byteorder = "1.3"
futures = "0.3"
nix = "0.19"
tokio = { version = "1.0", features = ["io-util", "fs", "net"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["io-util", "fs", "net", "rt-multi-thread", "rt", "macros"] }

[profile.release.build-override]
opt-level = 0
